2011-04-23  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-50-03
	* obo Peter vG: PoolFile: display buffer object lengths for each branch
	* M python/PoolFile.py

2011-03-31  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-50-02
	* fix bug 80318
	* prevent AthFile from freezing when invocated from an 'athena -i' job
	* M python/AthFile/impl.py

2011-03-14  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-50-01
	* make sure PoolFile.checkFile gets AtlasCore as an environment
	  as some reflex dicts load StoreGateSvc as a side effect
	* M python/PoolFile.py

2011-01-14  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-50
	* fixing bug 77026: opening non-ROOT files in non-RAW mode was
	  raising an IOError.
	* M python/AthFile/impl.py

2011-01-13  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-49
	* raise a proper IOError when fopen fails to open a file
	* M python/AthFile/impl.py

2011-01-03  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-48
	* fix utest
	* M python/AthFile/tests.py

2010-12-21  Sebastien Binet  <binet@voatlas51.cern.ch>

	* tagging PyUtils-00-10-47
	* improved root-file dumper and comparator
	* R bin/dump-root-file.py
	* M python/RootUtils.py
	* M python/scripts/__init__.py
	* M python/scripts/diff_root_files.py
	* A python/scripts/dump_root_file.py
	* M cmt/requirements

2010-12-20  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-46
	* use flattening pyroot-inspector + add a WIP dump-root-file script
	* A bin/dump-root-file.py
	* M python/scripts/diff_root_files.py
	* M cmt/requirements

2010-12-15  Sebastien Binet  <binet@voatlas51.cern.ch>

	* tagging PyUtils-00-10-45
	* more compact output for diff-root
	* M python/scripts/diff_root_files.py

2010-12-06  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-44
	* restore compat w/ py-2.5
	* restore re-ordering for all output files